# express_examples/webapp/swagger-output.json
@@ -29,10 +29,13 @@
             "schema": {
               "type": "object",
               "properties": {
+                "id": {
+                  "example": "any"
+                },
                 "first_name": {
                   "example": "any"
                 },
-                "id": {
+                "depId": {
                   "example": "any"
                 }
               }
@@ -61,6 +64,9 @@
           }
         ],
         "responses": {
+          "200": {
+            "description": "OK"
+          },
           "404": {
             "description": "Not Found"
           }
@@ -111,6 +117,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
@@ -139,6 +148,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
@@ -155,8 +167,14 @@
           }
         ],
         "responses": {
+          "200": {
+            "description": "OK"
+          },
           "404": {
             "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
@@ -168,6 +186,27 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "depId": {
+                  "type": "number",
+                  "example": 1
+                },
+                "depName": {
+                  "type": "string",
+                  "example": "HR"
+                },
+                "depLocation": {
+                  "type": "string",
+                  "example": "New York"
+                }
+              }
+            }
           }
         ],
         "responses": {
